<resources>
    <string name="app_name">AQIMonitor</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="yes">Ya</string>
    <string name="tidak">Tidak</string>
    <string name="msg_permission_maps">Anda harus mengizinkan izin Lokasi, Tekan Ya untuk menyetel.</string>
    <string name="title_home">Dashboard</string>
    <string name="title_discover">Discover</string>
    <string name="title_article">Artikel</string>
    <string name="exit_info">Tekan sekali lagi untuk keluar</string>
    <string name="location">Lampung, Indonesia</string>
    <string name="title_slide_1">Hidup lebih sehat</string>
    <string name="title_slide_2">Pantau kualitas udara di sekitarmu</string>
    <string name="title_slide_3">Prediksi kualitas udara</string>
    <string name="btn_first_button_title">Get Started</string>

    <string name="desc_slide_1">Hidup lebih sehat dengan menjaga diri dari paparan emisi karbon</string>
    <string name="desc_slide_2">Sekarang melalui smartphone kamu bisa mengetahui kualitas udara di sekitarmu</string>
    <string name="desc_slide_3">Kami menerapkan Machine Learning untuk memprediksi kualitas udara per jam, sehingga kamu bisa bersiap untuk menjaga diri dari emisi karbon!</string>

    <string name="btn_next">Next >></string>
    <string name="btn_finish">Finish</string>
    <string name="btn_skip">Skip</string>
    <string name="finish">Finish</string>
    <string name="title_activity_discover">DiscoverActivity</string>

    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="tidak_sehat">Tidak Sehat</string>
    <string name="sangat_tidak_sehat">Sangat Tidak \nSehat</string>
    <string name="berbahaya">Berbahaya</string>

    <string name="status_air_forecast_baik_msg">Kualitas udara di tempatmu diprediksikan berstatus Baik, pada status ini udara sangat aman bagi kesehatanmu!</string>
    <string name="status_air_forecast_sedang_msg">Kualitas udara di tempatmu diprediksikan berstatus Sedang, pada status ini udara masih aman kok untuk kesehatanmu!</string>
    <string name="status_air_forecast_tidak_sehat_msg">Kualitas udara di tempatmu diprediksikan Tidak Sehat, Jangan lupa pakai masker ya jika ingin keluar rumah!</string>
    <string name="status_air_forecast_sangat_tidak_sehat_msg">Kualitas udara di tempatmu diprediksikan akan Sangat Tidak Sehat, Jangan lupa siapkan maskermu ya!</string>
    <string name="status_air_forecast_berbahaya_msg">Kualitas udara di tempatmu diprediksikan berstatus Berbahaya, Udara sangat berbahaya bagi kesehatanmu, Jangan lupa pakai masker ya kalau mau keluar rumah!</string>
    <string name="status_air_baik_msg">Saat ini kualitas udara di tempatmu berstatus Baik, pada status ini udara Sangat aman untuk kesehatanmu!</string>
    <string name="status_air_sedang_msg">Saat ini kualitas udara di tempatmu berstatus Sedang, pada status ini udara masih aman kok untuk kesehatanmu!</string>
    <string name="status_air_tidak_sehat_msg">Saat ini kualitas udara di tempatmu berstatus Tidak Sehat, Jangan lupa pakai masker ya kalau mau keluar rumah!</string>
    <string name="status_air_sangat_tidak_sehat_msg">Saat ini kualitas udara di tempatmu berstatus Sangat Tidak Sehat, Jangan lupa pakai masker ya kalau mau keluar rumah!</string>
    <string name="status_air_berbahaya_msg">Saat ini kualitas udara di tempatmu berstatus Berbahaya, Udara sangat berbahaya bagi kesehatanmu, Jangan lupa pakai masker ya kalau mau keluar rumah!</string>
    <string name="hari_ini">Hari ini</string>
    <string name="pm25">PM2.5</string>
    <string name="now">Now</string>
    <string name="baik">Baik</string>
    <string name="sedang">Sedang</string>
    <string name="buruk">Buruk</string>
    <string name="aqi">AQI</string>
    <string name="pm10">PM10</string>
    <string name="so2">SO2</string>
    <string name="no2">NO2</string>
    <string name="o3">O3</string>
    <string name="co">CO</string>
    <string name="get_started">Get Started</string>
    <string name="description">Description</string>
    <string name="create_at">created at</string>
    <string name="created_by">created by</string>
    <string name="top_news_for_you">Top News for you</string>
    <string name="msg_no_internet">Tidak Ada Koneksi Internet</string>
    <string name="permission_msg_access_bg_location">Izinkan \'Akses Lokasi Sepanjang Waktu\' untuk mendapatkan notifikasi kualitas udara tiap jam</string>
    <string name="konfirmasi">Konfirmasi</string>
    <string name="title_profile">Profil</string>
    <string name="keluar">Keluar</string>
    <string name="email_invalid">Masukkan email yang valid</string>
    <string name="password_invalid">Kata Sandi minimal 6 karakter</string>
    <string name="name_invalid">Nama harus menggunakan huruf</string>
    <string name="input_email">Masukkan email</string>
    <string name="input_nama">Masukkan nama</string>
    <string name="input_password">Masukkan kata sandi</string>
    <string name="register">Daftar</string>
    <string name="have_account">sudah punya akun?</string>
    <string name="login">Masuk</string>
    <string name="not_have_account">tidak punya akun?</string>
    <string name="loading">Sedang Proses...</string>

    <string-array name="title">
        <item>Pertamina dan Chevron Sepakat Jajaki Bisnis Rendah Karbon BarengPertamina dan Chevron Sepakat Jajaki Bisnis Rendah Karbon Bareng</item>
        <item>Generasi Milenial Bisa Kurangi Emisi Karbon, Gimana Caranya?</item>
        <item>Peduli Bumi, Ini Sederet Langkah PLN Turunkan Emisi Global di RIPeduli Bumi, Ini Sederet Langkah PLN Turunkan Emisi Global di RI</item>
        <item>4 Tips Mengurangi Emisi Karbon dalam Aktivitasmu!</item>
    </string-array>

    <string-array name="description">
        <item>PT Pertamina (Persero) dengan Chevron Corporation melalui anak per…</item>
        <item>Indonesia saat ini telah memperbarui komitmen untuk mengurangi efek gas rumah kaca (GRK) dalam dokumen Nat</item>
        <item>PT PLN (Persero) terus berupaya dalam menurunkan emisi global di Indonesia. Hal ini dilakukan dalam rangka menja....</item>
        <item>Hampir semua aktivitas kita sehari-hari menghasilkan jejak karbon. Apakah lalu kita harus berhenti melakukan itu?</item>
    </string-array>

    <string-array name="created_by">
        <item>AW Monitor</item>
        <item>AW Monitor</item>
        <item>AW Monitor</item>
        <item>AW Monitor</item>
    </string-array>

    <string-array name="created_at">
        <item>15 mins ago</item>
        <item>15 mins ago</item>
        <item>15 mins ago</item>
        <item>15 mins ago</item>
    </string-array>

    <string-array name="image">
        <item>@drawable/article2</item>
        <item>@drawable/article2</item>
        <item>@drawable/article3</item>
        <item>@drawable/article4</item>
    </string-array>
</resources>