<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/item_navigation_home"
        android:icon="@drawable/ic_home_selector"
        android:onClick="onClickItemNavHome"
        android:title="@string/title_home" />

    <item
        android:id="@+id/item_navigation_discover"
        android:icon="@drawable/ic_discover_selector"
        android:onClick="onClickItemNavDiscover"
        android:title="@string/title_discover" />

    <item
        android:id="@+id/item_navigation_article"
        android:icon="@drawable/ic_article_selector"
        android:onClick="onClickItemNavArticle"
        android:title="@string/title_article" />

    <item
        android:id="@+id/item_navigation_profile"
        android:icon="@drawable/ic_profile_selector"
        android:onClick="onClickItemNavProfile"
        android:title="@string/title_profile" />

</menu>