<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/bottom_sheet_container"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_city"
        android:fontFamily="@font/poppins_medium"
        tools:text="@string/city_condition"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/first_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="130dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/shimmer_color_bg"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/aqi"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    tools:text="39"
                    android:id="@+id/tv_aqi_bottom"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textAlignment="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="130dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/shimmer_color_bg"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pm10"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textAlignment="center"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    tools:text="39"
                    android:id="@+id/tv_pm10"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="130dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:backgroundTint="@color/shimmer_color_bg"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pm25"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textAlignment="center"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    tools:text="39"
                    android:id="@+id/tv_pm25"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/second_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="130dp"
            android:backgroundTint="@color/shimmer_color_bg"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no2"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    tools:text="39"
                    android:id="@+id/tv_no2"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textAlignment="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="130dp"
            android:backgroundTint="@color/shimmer_color_bg"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/o3"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textAlignment="center"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    tools:text="39"
                    android:id="@+id/tv_o3"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="130dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/shimmer_color_bg"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/so2"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textAlignment="center"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    tools:text="39"
                    android:id="@+id/tv_so2"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/third_line"
        android:layout_width="match_parent"
        android:orientation="horizontal"

        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="130dp"
            android:backgroundTint="@color/shimmer_color_bg"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"

            android:layout_marginBottom="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/co"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    tools:text="39"
                    android:backgroundTint="@color/shimmer_color_bg"
                    android:id="@+id/tv_co"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textAlignment="center"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>



    </LinearLayout>



</LinearLayout>